// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`evo-date-range-input SSR > renders default 1`] = `
"<span
  class="date-textbox"
  locale="en-US"
>
  <span
    class="floating-label"
  >
    <label
      class="floating-label__label floating-label__label--animate floating-label__label--inline"
      for="GENERATED-0"
    >
      Purchase date from
    </label>
    <span
      class="textbox"
    >
      <input
        class="textbox__control"
        id="GENERATED-0"
        value=""
      />
    </span>
  </span>
  <span
    class="floating-label"
  >
    <label
      class="floating-label__label floating-label__label--animate floating-label__label--inline"
      for="GENERATED-1"
    >
      Purchase date to
    </label>
    <span
      class="textbox"
    >
      <input
        class="textbox__control"
        id="GENERATED-1"
        value=""
      />
      <button
        aria-controls="GENERATED-3"
        aria-expanded="false"
        aria-label="Open calendar"
        class="icon-btn icon-btn--transparent"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="icon icon--24"
        >
          <symbol
            id="GENERATED-2"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M18 1a1 1 0 0 1 1 1v1h1a3 3 0 0 1 3 3v14a3 3 0 0 1-3 3H4a3 3 0 0 1-3-3V6a3 3 0 0 1 3-3h1V2a1 1 0 0 1 2 0v1h10V2a1 1 0 0 1 1-1ZM6 5H4a1 1 0 0 0-1 1v1h18V6a1 1 0 0 0-1-1H6ZM3 9v11a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1V9H3Zm12 3a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v-2Zm-4-1a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-2Zm-6 1a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H6a1 1 0 0 1-1-1v-2Z"
              fill-rule="evenodd"
            />
          </symbol>
          <use
            href="#icon-calendar-24"
          />
        </svg>
      </button>
    </span>
  </span>
  <div
    class="date-textbox__popover"
    hidden=""
    id="GENERATED-3"
    style="visibility:hidden"
  >
    <div
      class="calendar"
    >
      <div
        class="calendar__header"
      >
        <div
          class="calendar__header--inner"
        >
          <button
            aria-label="Go to August 2026 (Previous month)"
            class="icon-btn"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="icon icon--24"
            >
              <symbol
                id="GENERATED-4"
                viewBox="0 0 24 24"
              >
                <path
                  d="m6.293 11.292 8-8a1 1 0 1 1 1.414 1.415L8.414 12l7.293 7.293a1 1 0 1 1-1.414 1.414l-8-8a.996.996 0 0 1 0-1.415Z"
                />
              </symbol>
              <use
                href="#icon-chevron-left-24"
              />
            </svg>
          </button>
          <h3>
            September 2026
          </h3>
          <button
            aria-label="Go to October 2026 (Next month)"
            class="icon-btn"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="icon icon--24"
            >
              <symbol
                id="GENERATED-5"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17.707 11.293a1 1 0 0 1 .22.33l-.22-.33Zm-.001-.001-7.999-8a1 1 0 0 0-1.414 1.415L15.586 12l-7.293 7.293a1 1 0 1 0 1.414 1.414l8-8a.999.999 0 0 0 .22-1.083"
                />
              </symbol>
              <use
                href="#icon-chevron-right-24"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="calendar__body"
      >
        <div
          class="calendar__month"
        >
          <table>
            <caption>
              September 2026
            </caption>
            <thead>
              <tr>
                <th>
                  Sun
                </th>
                <th>
                  Mon
                </th>
                <th>
                  Tue
                </th>
                <th>
                  Wed
                </th>
                <th>
                  Thu
                </th>
                <th>
                  Fri
                </th>
                <th>
                  Sat
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  colspan="2"
                />
                <td>
                  <button
                    aria-label="1"
                    tabindex="-1"
                    type="button"
                  >
                    1
                  </button>
                </td>
                <td>
                  <button
                    aria-label="2"
                    tabindex="-1"
                    type="button"
                  >
                    2
                  </button>
                </td>
                <td>
                  <button
                    aria-label="3"
                    tabindex="-1"
                    type="button"
                  >
                    3
                  </button>
                </td>
                <td>
                  <button
                    aria-label="4"
                    tabindex="-1"
                    type="button"
                  >
                    4
                  </button>
                </td>
                <td>
                  <button
                    aria-label="5"
                    tabindex="-1"
                    type="button"
                  >
                    5
                  </button>
                </td>
              </tr>
              <tr>
                <td>
                  <button
                    aria-label="6"
                    tabindex="-1"
                    type="button"
                  >
                    6
                  </button>
                </td>
                <td>
                  <button
                    aria-label="7"
                    tabindex="-1"
                    type="button"
                  >
                    7
                  </button>
                </td>
                <td>
                  <button
                    aria-label="8"
                    tabindex="-1"
                    type="button"
                  >
                    8
                  </button>
                </td>
                <td>
                  <button
                    aria-label="9"
                    tabindex="-1"
                    type="button"
                  >
                    9
                  </button>
                </td>
                <td>
                  <button
                    aria-label="10"
                    tabindex="-1"
                    type="button"
                  >
                    10
                  </button>
                </td>
                <td>
                  <button
                    aria-label="11"
                    tabindex="-1"
                    type="button"
                  >
                    11
                  </button>
                </td>
                <td>
                  <button
                    aria-label="12"
                    tabindex="-1"
                    type="button"
                  >
                    12
                  </button>
                </td>
              </tr>
              <tr>
                <td>
                  <button
                    aria-label="13"
                    tabindex="-1"
                    type="button"
                  >
                    13
                  </button>
                </td>
                <td>
                  <button
                    aria-label="14"
                    tabindex="-1"
                    type="button"
                  >
                    14
                  </button>
                </td>
                <td>
                  <button
                    aria-label="15"
                    tabindex="-1"
                    type="button"
                  >
                    15
                  </button>
                </td>
                <td>
                  <button
                    aria-label="16"
                    tabindex="-1"
                    type="button"
                  >
                    16
                  </button>
                </td>
                <td>
                  <button
                    aria-label="17"
                    tabindex="-1"
                    type="button"
                  >
                    17
                  </button>
                </td>
                <td>
                  <button
                    aria-label="18"
                    tabindex="-1"
                    type="button"
                  >
                    18
                  </button>
                </td>
                <td>
                  <button
                    aria-label="19"
                    tabindex="-1"
                    type="button"
                  >
                    19
                  </button>
                </td>
              </tr>
              <tr>
                <td>
                  <button
                    aria-label="20"
                    tabindex="-1"
                    type="button"
                  >
                    20
                  </button>
                </td>
                <td>
                  <button
                    aria-label="21"
                    tabindex="-1"
                    type="button"
                  >
                    21
                  </button>
                </td>
                <td>
                  <button
                    aria-current="date"
                    aria-label="22"
                    type="button"
                  >
                    22
                  </button>
                </td>
                <td>
                  <button
                    aria-label="23"
                    tabindex="-1"
                    type="button"
                  >
                    23
                  </button>
                </td>
                <td>
                  <button
                    aria-label="24"
                    tabindex="-1"
                    type="button"
                  >
                    24
                  </button>
                </td>
                <td>
                  <button
                    aria-label="25"
                    tabindex="-1"
                    type="button"
                  >
                    25
                  </button>
                </td>
                <td>
                  <button
                    aria-label="26"
                    tabindex="-1"
                    type="button"
                  >
                    26
                  </button>
                </td>
              </tr>
              <tr>
                <td>
                  <button
                    aria-label="27"
                    tabindex="-1"
                    type="button"
                  >
                    27
                  </button>
                </td>
                <td>
                  <button
                    aria-label="28"
                    tabindex="-1"
                    type="button"
                  >
                    28
                  </button>
                </td>
                <td>
                  <button
                    aria-label="29"
                    tabindex="-1"
                    type="button"
                  >
                    29
                  </button>
                </td>
                <td>
                  <button
                    aria-label="30"
                    tabindex="-1"
                    type="button"
                  >
                    30
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</span>"
`;

exports[`evo-date-range-input SSR > renders with a value 1`] = `
"<span
  class="date-textbox"
  locale="en-US"
>
  <span
    class="floating-label"
  >
    <label
      class="floating-label__label floating-label__label--animate floating-label__label--focus"
      for="GENERATED-0"
    >
      Purchase date from
    </label>
    <span
      class="textbox"
    >
      <input
        class="textbox__control"
        id="GENERATED-0"
        placeholder="MM/DD/YYYY"
        value="05/06/2024"
      />
    </span>
  </span>
  <span
    class="floating-label"
  >
    <label
      class="floating-label__label floating-label__label--animate floating-label__label--focus"
      for="GENERATED-1"
    >
      Purchase date to
    </label>
    <span
      class="textbox"
    >
      <input
        class="textbox__control"
        id="GENERATED-1"
        placeholder="MM/DD/YYYY"
        value="05/20/2024"
      />
      <button
        aria-controls="GENERATED-3"
        aria-expanded="false"
        aria-label="Open calendar"
        class="icon-btn icon-btn--transparent"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="icon icon--24"
        >
          <symbol
            id="GENERATED-2"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M18 1a1 1 0 0 1 1 1v1h1a3 3 0 0 1 3 3v14a3 3 0 0 1-3 3H4a3 3 0 0 1-3-3V6a3 3 0 0 1 3-3h1V2a1 1 0 0 1 2 0v1h10V2a1 1 0 0 1 1-1ZM6 5H4a1 1 0 0 0-1 1v1h18V6a1 1 0 0 0-1-1H6ZM3 9v11a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1V9H3Zm12 3a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v-2Zm-4-1a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-2Zm-6 1a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H6a1 1 0 0 1-1-1v-2Z"
              fill-rule="evenodd"
            />
          </symbol>
          <use
            href="#icon-calendar-24"
          />
        </svg>
      </button>
    </span>
  </span>
  <div
    class="date-textbox__popover"
    hidden=""
    id="GENERATED-3"
    style="visibility:hidden"
  >
    <div
      class="calendar"
    >
      <div
        class="calendar__header"
      >
        <div
          class="calendar__header--inner"
        >
          <button
            aria-label="Go to April 2024 (Previous month)"
            class="icon-btn"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="icon icon--24"
            >
              <symbol
                id="GENERATED-4"
                viewBox="0 0 24 24"
              >
                <path
                  d="m6.293 11.292 8-8a1 1 0 1 1 1.414 1.415L8.414 12l7.293 7.293a1 1 0 1 1-1.414 1.414l-8-8a.996.996 0 0 1 0-1.415Z"
                />
              </symbol>
              <use
                href="#icon-chevron-left-24"
              />
            </svg>
          </button>
          <h3>
            May 2024
          </h3>
          <button
            aria-label="Go to June 2024 (Next month)"
            class="icon-btn"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="icon icon--24"
            >
              <symbol
                id="GENERATED-5"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17.707 11.293a1 1 0 0 1 .22.33l-.22-.33Zm-.001-.001-7.999-8a1 1 0 0 0-1.414 1.415L15.586 12l-7.293 7.293a1 1 0 1 0 1.414 1.414l8-8a.999.999 0 0 0 .22-1.083"
                />
              </symbol>
              <use
                href="#icon-chevron-right-24"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="calendar__body"
      >
        <div
          class="calendar__month"
        >
          <table>
            <caption>
              May 2024
            </caption>
            <thead>
              <tr>
                <th>
                  Sun
                </th>
                <th>
                  Mon
                </th>
                <th>
                  Tue
                </th>
                <th>
                  Wed
                </th>
                <th>
                  Thu
                </th>
                <th>
                  Fri
                </th>
                <th>
                  Sat
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  colspan="3"
                />
                <td>
                  <button
                    aria-label="1"
                    type="button"
                  >
                    1
                  </button>
                </td>
                <td>
                  <button
                    aria-label="2"
                    tabindex="-1"
                    type="button"
                  >
                    2
                  </button>
                </td>
                <td>
                  <button
                    aria-label="3"
                    tabindex="-1"
                    type="button"
                  >
                    3
                  </button>
                </td>
                <td>
                  <button
                    aria-label="4"
                    tabindex="-1"
                    type="button"
                  >
                    4
                  </button>
                </td>
              </tr>
              <tr>
                <td>
                  <button
                    aria-label="5"
                    tabindex="-1"
                    type="button"
                  >
                    5
                  </button>
                </td>
                <td
                  class="calendar__cell--selected calendar__range--start"
                >
                  <button
                    aria-label="6 - Start of purchase date range"
                    aria-pressed="true"
                    tabindex="-1"
                    type="button"
                  >
                    6
                  </button>
                </td>
                <td
                  class="calendar__range"
                >
                  <button
                    aria-label="7 - Within purchase date range"
                    tabindex="-1"
                    type="button"
                  >
                    7
                  </button>
                </td>
                <td
                  class="calendar__range"
                >
                  <button
                    aria-label="8 - Within purchase date range"
                    tabindex="-1"
                    type="button"
                  >
                    8
                  </button>
                </td>
                <td
                  class="calendar__range"
                >
                  <button
                    aria-label="9 - Within purchase date range"
                    tabindex="-1"
                    type="button"
                  >
                    9
                  </button>
                </td>
                <td
                  class="calendar__range"
                >
                  <button
                    aria-label="10 - Within purchase date range"
                    tabindex="-1"
                    type="button"
                  >
                    10
                  </button>
                </td>
                <td
                  class="calendar__range"
                >
                  <button
                    aria-label="11 - Within purchase date range"
                    tabindex="-1"
                    type="button"
                  >
                    11
                  </button>
                </td>
              </tr>
              <tr>
                <td
                  class="calendar__range"
                >
                  <button
                    aria-label="12 - Within purchase date range"
                    tabindex="-1"
                    type="button"
                  >
                    12
                  </button>
                </td>
                <td
                  class="calendar__range"
                >
                  <button
                    aria-label="13 - Within purchase date range"
                    tabindex="-1"
                    type="button"
                  >
                    13
                  </button>
                </td>
                <td
                  class="calendar__range"
                >
                  <button
                    aria-label="14 - Within purchase date range"
                    tabindex="-1"
                    type="button"
                  >
                    14
                  </button>
                </td>
                <td
                  class="calendar__range"
                >
                  <button
                    aria-label="15 - Within purchase date range"
                    tabindex="-1"
                    type="button"
                  >
                    15
                  </button>
                </td>
                <td
                  class="calendar__range"
                >
                  <button
                    aria-label="16 - Within purchase date range"
                    tabindex="-1"
                    type="button"
                  >
                    16
                  </button>
                </td>
                <td
                  class="calendar__range"
                >
                  <button
                    aria-label="17 - Within purchase date range"
                    tabindex="-1"
                    type="button"
                  >
                    17
                  </button>
                </td>
                <td
                  class="calendar__range"
                >
                  <button
                    aria-label="18 - Within purchase date range"
                    tabindex="-1"
                    type="button"
                  >
                    18
                  </button>
                </td>
              </tr>
              <tr>
                <td
                  class="calendar__range"
                >
                  <button
                    aria-label="19 - Within purchase date range"
                    tabindex="-1"
                    type="button"
                  >
                    19
                  </button>
                </td>
                <td
                  class="calendar__cell--selected calendar__range--end"
                >
                  <button
                    aria-label="20 - End of purchase date range"
                    aria-pressed="true"
                    tabindex="-1"
                    type="button"
                  >
                    20
                  </button>
                </td>
                <td>
                  <button
                    aria-label="21"
                    tabindex="-1"
                    type="button"
                  >
                    21
                  </button>
                </td>
                <td>
                  <button
                    aria-label="22"
                    tabindex="-1"
                    type="button"
                  >
                    22
                  </button>
                </td>
                <td>
                  <button
                    aria-label="23"
                    tabindex="-1"
                    type="button"
                  >
                    23
                  </button>
                </td>
                <td>
                  <button
                    aria-label="24"
                    tabindex="-1"
                    type="button"
                  >
                    24
                  </button>
                </td>
                <td>
                  <button
                    aria-label="25"
                    tabindex="-1"
                    type="button"
                  >
                    25
                  </button>
                </td>
              </tr>
              <tr>
                <td>
                  <button
                    aria-label="26"
                    tabindex="-1"
                    type="button"
                  >
                    26
                  </button>
                </td>
                <td>
                  <button
                    aria-label="27"
                    tabindex="-1"
                    type="button"
                  >
                    27
                  </button>
                </td>
                <td>
                  <button
                    aria-label="28"
                    tabindex="-1"
                    type="button"
                  >
                    28
                  </button>
                </td>
                <td>
                  <button
                    aria-label="29"
                    tabindex="-1"
                    type="button"
                  >
                    29
                  </button>
                </td>
                <td>
                  <button
                    aria-label="30"
                    tabindex="-1"
                    type="button"
                  >
                    30
                  </button>
                </td>
                <td>
                  <button
                    aria-label="31"
                    tabindex="-1"
                    type="button"
                  >
                    31
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</span>"
`;
